--- a/app/src/main/res/layout/item_sp_moi.xml
+++ b/app/src/main/res/layout/item_sp_moi.xml
@@ -2,21 +2,23 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:elevation="8dp"
-    app:cardCornerRadius="10dp"
-    android:layout_width="wrap_content"
+    app:cardCornerRadius="4dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="10dp"
+
+    android:layout_width="160dp"
     android:layout_height="wrap_content">
     <FrameLayout
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
 
-        >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-
-
             >
 
             <ImageView
