t mới thêm chi tiết sản phẩm

--- a/app/src/main/res/menu/nav.xml
+++ b/app/src/main/res/menu/nav.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/trangchu"
         android:icon="@drawable/home_icon"
-        android:title="Tran Chủ" />
+        android:title="Trang Chủ" />
     <item
         android:id="@+id/danhsach"
         android:icon="@drawable/successful"
