--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,27 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="#ff00dfff"
                 app:title="Trang chủ">
+                <FrameLayout
+                    android:id="@+id/framegiohang"
+                    android:layout_width="55dp"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="5dp">
+
+                    <ImageView
+                        android:layout_marginTop="15dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:src="@drawable/icon_cart" />
+                    <com.nex3z.notificationbadge.NotificationBadge
+                        android:id="@+id/menu_sl"
+                        android:layout_marginTop="3dp"
+                        android:layout_marginEnd="3dp"
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_gravity="top|end" />
+                </FrameLayout>
 
             </androidx.appcompat.widget.Toolbar>
 
