--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -16,6 +16,9 @@
     <TextView
         android:layout_gravity="center"
         android:id="@+id/userNGuoidung"
+        android:textColor="@color/primary"
+        android:textStyle="bold"
+        android:text="xin chào nguyễn công phương"
         android:layout_width="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_height="wrap_content"/>
